--- a/formularios.html
+++ b/formularios.html
@@ -24,9 +24,10 @@
         </div>
         <br>
         <div>
-            <label for="">Modalidad de Cursada</label>
+            <label ondemand="">Modalidad de Cursada</label>
             <input type="radio"> <span>On-Demand</span>
-            <input type="radio"> <span>En vivo</span>
+
+            <input type="radio" name="Modalidad"> <span>En vivo</span>
         </div>
         <br>
         <div>
